backport: re PR tree-optimization/51042 (endless recursion in phi_translate)

2012-01-03  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-11-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/51042
	* tree-ssa-pre.c (phi_translate_1): Avoid recursing on
	self-referential expressions.  Refactor code to avoid duplication.

	* gcc.dg/torture/pr51042.c: New testcase.

From-SVN: r182848